<resources>
    <string name="app_name">Practicum-Android-Diploma</string>
    <string name="crew_title">Команда</string>
    <string name="workers_list">Над приложением работали</string>
    <string name="worker_first">Васильев Кирилл</string>
    <string name="worker_second">Подлесных Иван</string>
    <string name="worker_third">Бухолов Дмитрий</string>
    <string name="worker_fourth">Табаев Егор</string>
    <string name="main">Главная</string>
    <string name="favorites">Избранное</string>
    <string name="crew">Команда</string>
    <string name="vacancy_search_title">Поиск вакансий</string>
    <string name="filter_settings_title">Настройка фильтрации</string>
    <string name="region_choose_title">Выбор региона</string>
    <string name="industry_choose_title">Выбор отрасли</string>
    <string name="country_choose_title">Выбор страны</string>
    <string name="vacancy_title">Вакансия</string>
    <string name="favorite_title">Избранное</string>
    <string name="workplace_choose_title">Выбор места работы</string>

    <string name="salary_not_specified">Зарплата не указана</string>
    <string name="salary_range_from_to">от %1$s до %2$s %3$s</string>
    <string name="salary_range_from">от %1$s %2$s</string>
    <string name="salary_range_to">до %1$s %2$s</string>

    <string name="vacancy_title_template">%1$s, %2$s</string>
    <string name="enter_request">"" Введите запрос</string>
    <string name="no_region">Такого региона нет</string>
    <string name="no_vacancies">Таких вакансий нет</string>
    <string name="not_get_a_list_of_vacancies">Не удалось получить\n список вакансий</string>
    <string name="internet_is_not_available">Нет интернета</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="Founded">Найдено</string>
    <string name="empty_string" />
    <string name="server_error_message">Server error</string>
    <string name="check_connection_message">No Internet connection</string>
    <string name="empty_pace">" "</string>

    <plurals name="count_of_vacancies">
        <item quantity="one">%d вакансия</item>
        <item quantity="two">%d вакансии</item>
        <item quantity="few">%d вакансий</item>
        <item quantity="many">%d вакансий</item>
        <item quantity="other">%d вакансий</item>
    </plurals>


    <string name="vacancy_description">Описание вакансии</string>
    <string name="required_experience">Требуемый опыт</string>
    <string name="key_skills">Ключевые навыки</string>
    <string name="vacancy_not_found_or_deleted">Вакансия не найдена или удалена</string>

    <string name="empty_favorites_list">Список пуст</string>
    <string name="favorites_error">Не удалось получить\n список вакансий</string>

    <string name="share_app_text_plain" translatable="false">text/plain</string>
    <string name="message_email">" "</string>
    <string name="share_vacancy_url" translatable="false">https://hh.ru/vacancy/%s</string>
    <string name="contacts">Контакты</string>
    <string name="mailto" translatable="false">mailto:%s</string>
    <string name="mail">Почта: </string>
    <string name="unknown_view_type_requested">Unknown view type requested: %1$s</string>
    <string name="filter">фильтр</string>
    <string name="filter_icon">наличие фильтра</string>
    <string name="employment_schedule">%s, %s</string>
    <string name="phone">Телефон: </string>
    <string name="enter_region">"" Введите регион</string>
    <string name="country">Страна</string>
    <string name="region">Регион</string>
    <string name="unable_to_get_list">Не удалось получить список</string>
    <string name="choose">Выбрать</string>
    <string name="enter_industry">Введите отрасль</string>
    <string name="industry_not_found">Такой отрасли нет</string>
    <string name="select">Выбрать</string>
    <string name="enter_sum"> Введите сумму</string>
    <string name="work_place">Место работы</string>
    <string name="industry">Отрасль</string>
    <string name="do_not_show_without_salary">Не показывать без зарплаты</string>
    <string name="salary_expected"> Ожидаемая зарплата</string>
    <string name="save">Применить</string>
    <string name="reset">Сбросить</string>

    <string name="country_and_region_template">%s, %s</string>
    <string name="eur">EUR</string>
    <string name="usd">USD</string>
    <string name="rur">RUR</string>
    <string name="rub">RUB</string>
    <string name="byr">BYR</string>
    <string name="kzt">KZT</string>
    <string name="uah">UAH</string>
    <string name="azn">AZN</string>
    <string name="uzs">UZS</string>
    <string name="gel">GEL</string>
    <string name="kgt">KGT</string>
    <string name="eur_symbol">€</string>
    <string name="usd_symbol">$</string>
    <string name="rur_symbol">₽</string>
    <string name="rub_symbol">₽</string>
    <string name="byr_symbol">Br</string>
    <string name="kzt_symbol">₸</string>
    <string name="uah_symbol">₴</string>
    <string name="azn_symbol">₼</string>
    <string name="uzs_symbol">so’m</string>
    <string name="gel_symbol">₾</string>
    <string name="kgt_symbol">⃀</string>
</resources>
