<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/filter_title"
        style="@style/AndroidDiploma.AppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar"
            style="@style/AndroidDiploma.ToolBar"
            app:navigationIcon="@drawable/arrow_back_icon"
            app:title="@string/filter_settings_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/work_place"
        style="@style/AndroidDiploma.FilterButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/work_place"
        app:iconGravity="end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_title" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/industry"
        style="@style/AndroidDiploma.FilterButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/industry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/work_place" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:importantForAccessibility="no"
        android:src="@drawable/arrow_forward"
        app:layout_constraintBottom_toBottomOf="@id/industry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/industry" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/salary_frame"
        style="@style/AndroidDiploma.SalaryInputTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_height"
        android:layout_marginHorizontal="@dimen/size_xxl"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_rectangle"
        android:hint="@string/salary_expected"
        app:expandedHintEnabled="false"
        app:hintTextAppearance="@style/HintTextApperiance"
        app:hintTextColor="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/industry">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/AndroidDiploma.SalaryInputTextStyle.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_sum" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/salary_is_required_TV"
        style="@style/AndroidDiploma.FilterButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:checkable="true"
        android:text="@string/do_not_show_without_salary"
        app:icon="@drawable/check_box_selector"
        app:iconTint="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/salary_frame" />


</androidx.constraintlayout.widget.ConstraintLayout>
