<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/workplace_title"
        style="@style/AndroidDiploma.AppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar"
            style="@style/AndroidDiploma.ToolBar"
            app:navigationIcon="@drawable/arrow_back_icon"
            app:title="@string/workplace_choose_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/country_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/area_item_height"
        android:layout_marginTop="@dimen/size_xxl"
        app:layout_constraintTop_toBottomOf="@id/workplace_title">

        <TextView
            android:id="@+id/country_hint"
            style="@style/FontYSDisplay.Regular16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_xxl"
            android:text="@string/country"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/country_title"
            style="@style/FontYSDisplay.Regular12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_xxl"
            android:text="@string/country"
            app:layout_constraintBottom_toTopOf="@id/country_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/country_name"
            style="@style/FontYSDisplay.Regular16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_xxl"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/country_title" />

        <ImageView
            android:id="@+id/action_icon_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/size_xxl"
            android:src="@drawable/arrow_forward"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnPrimary" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/region_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/area_item_height"
        app:layout_constraintTop_toBottomOf="@id/country_bar">

        <TextView
            android:id="@+id/region_hint"
            style="@style/FontYSDisplay.Regular16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_xxl"
            android:text="@string/region"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/region_title"
            style="@style/FontYSDisplay.Regular12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_xxl"
            android:text="@string/region"
            app:layout_constraintBottom_toTopOf="@id/region_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/region_name"
            style="@style/FontYSDisplay.Regular16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_xxl"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/region_title" />

        <ImageView
            android:id="@+id/action_icon_region"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/size_xxl"
            android:src="@drawable/arrow_forward"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnPrimary" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/choose_button"
        style="@style/AndroidDiploma.FilterButton.Accept"
        android:layout_width="match_parent"
        android:layout_height="@dimen/area_item_height"
        android:layout_marginHorizontal="@dimen/size_xxl"
        android:layout_marginBottom="@dimen/size_4xl"
        android:text="@string/choose"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
